<resources>
    <string name="app_name">Talk Hub</string>
    <string name="talk_hub">Talk Hub</string>
    <string name="send_otp">Send Otp</string>
    <string name="mobile">Mobile</string>
    <string name="eter_phone_number">Eter phone number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>


    <string name="emter_mobile_number">Emter mobile number</string>
    <string name="sent_otp">Sent otp</string>
    <string name="enter_sent_otp_button_for_otp">Enter \'sent otp\' button for otp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="next">Next</string>
    <string name="otp">OTP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="rahul_mondal">Rahul Mondal</string>
    <string name="this_is_my_last_messagehkdkfjhkhkrjor">This is my last messagehkdkfjhkhkrjor</string>
    <string name="rahul">Rahul</string>
    <string name="online">Online</string>
    <string name="hello_rahul">hello rahul</string>
    <string name="message">Message</string>
    <string name="select_contact">Select Contact</string>
    <string name="_289_contact">289 Contact</string>
</resources>