<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"

    android:weightSum="100"
    tools:context=".Authentication">

    <LinearLayout
        android:id="@+id/linear_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="10"


        >

        <LinearLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            tools:ignore="UselessParent"
            android:gravity="center"
            android:background="@drawable/authentication_step"
            android:backgroundTint="@color/yellow">

            <TextView

                android:id="@+id/step_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:elevation="8dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            tools:ignore="UselessParent"
            android:gravity="center"
            android:background="@drawable/authentication_step"
            android:backgroundTint="#9E8D5A">

            <TextView
                android:id="@+id/step_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            tools:ignore="UselessParent"
            android:gravity="center"
            android:background="@drawable/authentication_step"
            android:backgroundTint="#9E8D5A">

            <TextView
                android:id="@+id/step_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:elevation="8dp" />
        </LinearLayout>




    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="15"
        android:layout_height="150dp"
        android:src="@drawable/phone_icon"
        app:tint="@color/yellow" />
    <!--      app:layout_constraintTop_toBottomOf="@id/linear_first"-->
    <!--     -->
    <!--      app:layout_constraintBottom_toTopOf="@id/linear"-->

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:gravity="center_horizontal"



        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emter_mobile_number"

            android:textSize="25sp"
            android:letterSpacing="0.08"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="horizontal"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/CodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_showFlag="false"

                app:ccp_showNameCode="false"
                />
            <EditText
                android:id="@+id/AuEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/mobile"
                android:maxLength="11"
                android:background="@drawable/eidit_text_shape"
                android:padding="10dp"

                android:inputType="phone"

                android:elevation="5dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        >


        <Button
            android:id="@+id/AuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_otp"
            android:textColor="@color/black"

            android:textStyle="bold"
            android:textSize="20sp"
            android:backgroundTint="@color/yellow"
            />
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


</LinearLayout>